# Snarl

./: .gitignore  BOOTSTRAP.md  README.md
.github/workflows/: ci.yml
app/: .eslintrc.js  .gitignore  App.tsx  app.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
app/__mocks__/: react-native-keychain.js  react-native-mmkv.js  react-native-vision-camera.js
app/__tests__/: App.test.tsx  base64.test.ts  bounce.test.ts  calibration.test.ts  cameraRecorderSource.test.ts  captureSpec.test.ts  consent.test.ts  consentLog.test.ts  decodeJpeg.test.ts  frameCache.test.ts  heatmap.test.ts  lineLength.test.ts  pitchMap.test.ts  preprocess.test.ts  selectFormat.test.ts  trackClip.test.ts  trajectory.test.ts
app/android/: gradle.properties  settings.gradle
app/android/app/: build.gradle
app/ios/: Podfile
app/ios/Snarl/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/Snarl.xcodeproj/: project.pbxproj
app/src/camera/: FrameSource.ts  cameraRecorderSource.ts  selectFormat.ts
app/src/domain/: bounce.ts  calibration.ts  captureSpec.ts  clip.ts  consent.ts  consentLog.ts  cricket.ts  heatmap.ts  lineLength.ts  pitchMap.ts  trajectory.ts
app/src/infra/: encryptedConsentStore.ts  log.ts  random.ts
app/src/ml/: TfliteModelRunner.ts  analyzeClip.ts  base64.ts  decodeJpeg.ts  demoSource.ts  frameCache.ts  nativeModelRunner.ts  preprocess.ts  trackClip.ts
app/src/screens/: CalibrationScreen.tsx  CaptureScreen.tsx  ConsentScreen.tsx  (+2 more)
ml/: DATA_COLLECTION.md  README.md  pyproject.toml
ml/notebooks/: milestone1.ipynb  pretrain.ipynb
ml/src/snarl_ml/: __init__.py  arrange.py  convert.py  data.py  evaluate.py  export.py  heatmap.py  latency.py  losses.py  milestone1.py  model.py  parity.py  prepare.py  runtime.py  train.py  trajectory.py  verify_tflite.py  video.py
ml/tests/: test_arrange.py  test_data.py  test_evaluate.py  test_export.py  test_heatmap.py  test_model.py  test_prepare.py  test_train.py  test_trajectory.py  test_verify_tflite.py  test_video.py
scripts/: precommit.sh
(+7 files in other folders)
