[project]
name = "snarl-ml"
version = "0.0.1"
description = "Model training and PyTorch->TFLite conversion for the cricket app. Offline only; not shipped."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Strict-but-sane set: no silent failures, clean code.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "PTH", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src"]
