[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "snarl-ml"
version = "0.0.1"
description = "Model training and PyTorch->TFLite conversion for the cricket app. Offline only; not shipped."
requires-python = ">=3.12"
dependencies = ["numpy>=2"]

[project.optional-dependencies]
# Conversion/inference deps are heavy; install when training/converting (e.g. on Colab/Kaggle).
convert = ["torch>=2.4", "litert-torch", "ai-edge-litert"]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Strict-but-sane set: no silent failures, clean code.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "PTH", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
# torch/litert are untyped to mypy (Any); allow subclassing nn.Module without misc errors.
disallow_subclassing_any = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["src"]

# Heavy third-party libs without local stubs are checked where installed (CI/Colab), Any here.
[[tool.mypy.overrides]]
module = ["torch.*", "litert_torch.*", "ai_edge_litert.*", "tensorflow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
